# src/api/v1/components/tasks/interface/task.routes.ts
@@ -13,6 +13,7 @@ export class TaskRoutesV1 {
         const controller = new TaskController(repository)
 
         router.get('/', controller.getTasks)
+        router.put('/', controller.createTask)
 
         return router
     }
